--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.2",
     "react-native-navigation": "^1.1.84",
-    "react-native-vector-icons": "^4.2.0"
+    "react-native-vector-icons": "^4.2.0",
+    "react-native-video": "^1.0.0"
   },
   "devDependencies": {
     "babel-jest": "20.0.3",
