--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.2",
     "react-native-navigation": "^1.1.84",
+    "react-native-picker": "^4.0.18",
     "react-native-vector-icons": "^4.2.0",
     "react-native-video": "^1.0.0",
     "react-native-video-controls": "^1.2.0"
