adding the initial template for adding content

--- a/ios/jitzer/Info.plist
+++ b/ios/jitzer/Info.plist
@@ -35,8 +35,14 @@
 			</dict>
 		</dict>
 	</dict>
+	<key>NSCameraUsageDescription</key>
+	<string>test</string>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string/>
+	<string></string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>test</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>test</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>FontAwesome.tff</string>
