--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.0.0-alpha.6",
     "react-native": "0.44.2",
+    "react-native-image-picker": "^0.26.3",
     "react-native-navigation": "^1.1.84",
     "react-native-picker": "^4.0.18",
     "react-native-vector-icons": "^4.2.0",
